# infracode-crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY.md  SETUP.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  clients.py  integrations.py  projects.py  reports.py  tasks.py  transactions.py  webhooks.py
backend/app/core/: config.py  database.py  security.py  storage.py
backend/app/integrations/: __init__.py  base.py  datajud.py  whatsapp.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: __init__.py  client_service.py  project_service.py  report_service.py  storage_service.py  task_service.py  transaction_service.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AttachmentUpload.tsx  ClientCard.tsx  Layout.tsx  ProjectCard.tsx  Sidebar.tsx  StatCard.tsx  TaskCard.tsx  TransactionForm.tsx
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useApi.ts  useConfirm.ts  useConfirm.tsx  useDebounce.ts  useKeyboard.ts  useLocalStorage.ts  useSessionStorage.ts  useToast.ts
frontend/src/lib/: api.ts  constants.ts  utils.ts
frontend/src/pages/: ClientDetail.tsx  Clients.tsx  Dashboard.tsx  Finance.tsx  Integrations.tsx  ProjectDetail.tsx  (+3 more)
(+40 files in other folders)
