[package]
name = "infracode-crm"
version = "0.1.0"
description = "InfraCode CRM desktop application"
authors = ["InfraCode"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.2.5" }

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri = { version = "2.2.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
